--- a/OptimizationTask/ProfileSample/ProfileSample/Views/Home/Index.cshtml
+++ b/OptimizationTask/ProfileSample/ProfileSample/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Web.UI.WebControls
-@model List<ProfileSample.Models.ImageModel>
+@model IEnumerable<ProfileSample.Models.EncodedImageModel>
 
 @{
     ViewBag.Title = "title";
@@ -9,8 +9,7 @@
 <div class="row">
     @foreach (var item in Model)
     {
-        var converted = Convert.ToBase64String(item.Data);
-        var imgSrc = string.Format("data:image/jpg;base64,{0}", converted);
+        var imgSrc = string.Format("data:image/jpg;base64,{0}", item.Data);
 
         <img src="@imgSrc" width="300" height="150"/>
     }
