--- a/OptimizationTask/ProfileSample/ProfileSample/Views/Home/Index.cshtml
+++ b/OptimizationTask/ProfileSample/ProfileSample/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Web.UI.WebControls
-@model IEnumerable<ProfileSample.Models.EncodedImageModel>
+@model IEnumerable<int>
 
 @{
     ViewBag.Title = "title";
@@ -7,10 +7,8 @@
 }
 
 <div class="row">
-    @foreach (var item in Model)
+    @foreach (var id in Model)
     {
-        var imgSrc = string.Format("data:image/jpg;base64,{0}", item.Data);
-
-        <img src="@imgSrc" width="300" height="150"/>
+        <img src="@Url.Action("GetImage", new {id})" width="300" height="150"/>
     }
 </div>
